--- a/src/components/Carepagecomponent.css
+++ b/src/components/Carepagecomponent.css
@@ -19,11 +19,12 @@
     text-align: left;
   }
   .carebutton{
-    margin-left: 0.5rem;
+    margin-left: 1rem;
     border: none;
     background: none;
-    font-size: 26px;
+    font-size: 20px;
     color: #B4B4B4;
+    margin-right: 1rem;
   }
   .Careall{
     display: flex;
@@ -45,13 +46,16 @@
 }
 @media (min-width:320px) and (max-width: 767px){
   .Care span{
-    font-size: 22px;
+    font-size: 20px;
     text-align: left;
+    padding: 2rem 2rem;
+    padding-right: 0;
   }
   .Care p{
     padding-left: 2rem;
     padding-right: 0;
     text-align: justify;
+    font-size: 18px;
   }
   .Careall{
     display: flex;
@@ -59,7 +63,7 @@
     align-items: center;
   }
   .pagebutton{
-    padding-left: 0 !important;
+    padding-left: 2rem !important;
   }
   .carebutton{
     padding-left: 0;
@@ -68,4 +72,12 @@
     width: 100%;
     height: auto;
   }
+  .carebutton {
+    margin-left: 0rem;
+    border: none;
+    background: none;
+    font-size: 20px;
+    color: #B4B4B4;
+    margin-right: 0.5rem;
+}
 }
