--- a/src/components/Navcomponent.css
+++ b/src/components/Navcomponent.css
@@ -45,6 +45,9 @@
     .contfluid{
         padding: 0 1rem;
     }
+    .link{
+        margin-right: 0;
+    }
 }
 @media (min-width:768px) and (max-width: 1080px){
     .navlink{
